<resources>
    <string name="game_title">Couple Game</string>
    <string name="game_top_bar_subtitle">Little details that can make a difference</string>
    <string name="game_subtitle">Do we know each other well?</string>
    <string name="game_swipe_hint">Swipe for a new question</string>
    <string name="game_take_turns">Take turns sharing your answers</string>
    <string name="cd_settings">Settings</string>
    <string name="cd_shuffle_card">Show a random card</string>
    <string name="cd_close">Close</string>
    <string name="cd_switch_to_grid_view">Switch to grid view</string>
    <string name="cd_switch_to_swipe_view">Switch to card view</string>
</resources>
